--- a/.github/workflows/update-vencord.yaml
+++ b/.github/workflows/update-vencord.yaml
@@ -35,7 +35,7 @@ jobs:
             echo "Failed to extract old version"
             exit 1
           fi
-          echo "version=$OLD_VERSION" >> $GITHUB_OUTPUT
+          echo "version=${OLD_VERSION:0:7}" >> $GITHUB_OUTPUT
 
       - name: Update Vencord
         id: update
@@ -55,13 +55,13 @@ jobs:
             echo "Failed to extract new version"
             exit 1
           fi
-          echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
+          echo "version=${NEW_VERSION:0:7}" >> $GITHUB_OUTPUT
 
       - name: Test Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if ! nix-build -E 'with import <nixpkgs> {}; callPackage ./vencord.nix {}'; then
+          if ! nix-build -E 'with import <nixpkgs> {}; callPackage ./vencord.nix { unstable = true; }'; then
             echo "Build failed"
             exit 1
           fi
@@ -78,7 +78,14 @@ jobs:
           if [[ -n "$(git status --porcelain)" ]]; then
             git add .
             git commit -m "vencord-unstable: ${{ steps.old-version.outputs.version }} -> ${{ steps.new-version.outputs.version }}"
-            git push
+            for i in {1..3}; do
+              git fetch origin
+              git pull --rebase origin ${{ github.ref_name }}
+              if git push; then
+                break
+              fi
+              sleep 5
+            done
           else
             echo "No changes to commit"
           fi
@@ -133,7 +140,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          if ! nix-build -E 'with import <nixpkgs> {}; callPackage ./vencord.nix {}'; then
+          if ! nix-build -E 'with import <nixpkgs> {}; callPackage ./vencord.nix { unstable = false;}'; then
             echo "Build failed"
             exit 1
           fi
@@ -150,7 +157,15 @@ jobs:
           if [[ -n "$(git status --porcelain)" ]]; then
             git add .
             git commit -m "vencord: ${{ steps.old-version.outputs.version }} -> ${{ steps.new-version.outputs.version }}"
-            git push
+            git fetch origin
+            for i in {1..3}; do
+              git fetch origin
+              git pull --rebase origin ${{ github.ref_name }}
+              if git push; then
+                break
+              fi
+              sleep 5
+            done
           else
             echo "No changes to commit"
           fi
